--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation "com.android.support:support-compat:$supportLibVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.github.matecode:Snacky:1.0.3'
+
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.jakewharton.timber:timber:4.7.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
