--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation 'com.github.matecode:Snacky:1.0.3'
+    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
