--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation 'com.github.matecode:Snacky:1.0.3'
-    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    implementation 'com.github.medyo:android-about-page:v1.2.3'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -61,5 +61,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
-    androidTestImplementation 'com.android.support:support-annotations:27.1.0'
+    androidTestImplementation "com.android.support:support-annotations:$supportLibVersion"
 }
