--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
 
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'org.mockito:mockito-core:2.18.3'
+    androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.16.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.1'
