--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.google.dagger:dagger:2.16'
+    implementation 'com.google.dagger:dagger-android-support:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
+
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -57,7 +61,7 @@ dependencies {
     annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'org.mockito:mockito-core:2.18.3'
+    testImplementation 'org.mockito:mockito-core:2.18.3'
     androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.16.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
