--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,8 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 api_key="PUT_YOUR_CLIENT_ID_HERE"
+api_base_url = "https://api.unsplash.com/"
+api_main_gallery = "curated"
+img_folder_name = "SplashGallery"
+request_page_size = 30
+max_page_number = 5
