--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 api_key="PUT_YOUR_CLIENT_ID_HERE"
 api_base_url = "https://api.unsplash.com/"
-api_main_gallery = "curated"
+api_main_gallery = "photos"
 img_folder_name = "SplashGallery"
 request_page_size = 30
 max_page_number = 5
